# ankor-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/agent/: guardrails.py  strands_agent.py  system_prompt.py
app/api/: deps.py  health.py  session.py
app/clients/: ankor_backend.py  bedrock_client.py
app/config/: logging.py  settings.py
app/memory/: agentcore_memory.py  models.py  session_store.py
app/schemas/: athlete.py  evaluation.py  session.py  tool_inputs.py  tool_outputs.py
app/services/: confirmation_service.py  conversation_service.py  tool_executor.py
app/tools/: create_evaluation_draft.py  finalize_evaluation.py  find_athlete.py  list_evaluation_templates.py  registry.py
app/utils/: errors.py
app/voice/: audio_stream.py  events.py  sonic_session.py  transcript_parser.py
prompts/: clarification_examples.txt  confirmation_examples.txt  create_evaluation_system.txt
tests/: test_ankor_backend.py  test_app.py  test_confirmation_service.py  test_conversation_service.py  test_guardrails.py  test_health.py  test_schemas.py  test_session_api.py  test_session_store.py  test_sonic_session.py  test_strands_agent.py  test_tools.py  test_transcript_parser.py
